<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:exported="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity"
    android:background="#000"
    android:weightSum="1"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/logo_dust"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/game_name"
        android:layout_weight="0.60"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/single_player"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/single_player"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/single_player"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/double_player"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/double_player"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/double_player"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/scoreboard"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/score_board"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/game_exit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/exit_game"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/exit_game"
            android:scaleType="centerInside"/>


    </LinearLayout>

</LinearLayout>