<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:exported="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.EndGameDouble"
    android:background="#000"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/save_score"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/save_your_score_neon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/points_pink"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:scaleType="centerInside"
            android:src="@drawable/pink_1" />

        <ImageView
            android:id="@+id/points_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/blue_1" />


    </LinearLayout>

    <EditText
        android:id="@+id/enter_pink_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#f3a7f0"
        android:layout_gravity="center"
        android:gravity = "center"
        android:hint ="@string/enter_pink_player_name"
        android:inputType="text"
        android:layout_margin="20dp"
        android:autofillHints="username">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enter_blue_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#58bde8"
        android:layout_gravity="center"
        android:gravity = "center"
        android:hint ="@string/enter_blue_player_name"
        android:inputType="text"
        android:layout_margin="10dp"
        android:autofillHints="username">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">



        <Button
            android:id="@+id/save_to_score_board"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/save_scores"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/skip_saving"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="#fff"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>