<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:exported="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.EndGameSingle"
    android:background="#000"
    android:weightSum="1"
    >

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="10dp"
    android:src="@drawable/save_your_score2"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/save_your_score_neon"
    android:layout_weight="0.25"/>

    <ImageView
        android:id="@+id/points_pink"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:scaleType="centerInside"
        android:src="@drawable/pink_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.15"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >
    <EditText
        android:id="@+id/enter_pink_name_single"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#f3a7f0"
        android:layout_gravity="center"
        android:gravity = "center"
        android:hint ="@string/enter_pink_player_name"
        android:inputType="text"
        android:layout_margin="10dp"
        android:autofillHints="username">

        <requestFocus />
    </EditText>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.3"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >


        <ImageButton
            android:id="@+id/save_to_score_board_single"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/save_single_score"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/savescore1"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/skip_saving_single"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="#fff"
            android:textSize="20sp"
            android:src="@drawable/skip"
            android:scaleType="centerInside"/>


    </LinearLayout>

</LinearLayout>